--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.2",
+    "@types/react-slick": "^0.23.13",
     "antd": "^5.22.3",
     "axios": "^1.7.8",
     "axios-curlirize": "^2.0.0",
@@ -20,7 +21,9 @@
     "react": "^18",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-player": "^2.16.0",
+    "react-slick": "^0.30.3"
   },
   "devDependencies": {
     "@types/axios-curlirize": "^1.3.5",
