--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-player": "^2.16.0",
-    "react-slick": "^0.30.3"
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/axios-curlirize": "^1.3.5",
