--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/nextjs-registry": "^1.0.2",
     "@types/react-slick": "^0.23.13",
     "antd": "^5.22.3",
+    "apexcharts": "^4.3.0",
     "axios": "^1.7.8",
     "axios-curlirize": "^2.0.0",
     "class-transformer": "^0.5.1",
@@ -19,6 +20,8 @@
     "lodash": "^4.17.21",
     "next": "^14.2.3",
     "react": "^18",
+    "react-apexcharts": "^1.7.0",
+    "react-countup": "^6.5.3",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
